# iswitch

./: .gitignore  AGENTS.md  CLAUDE.md  Makefile  README.md  cliff.toml  rustfmt.toml
docs/: .folder.md  ARCHITECTURE.md  CODE_FORMATTING.md  CODE_FORMATTING_ROLLOUT.md  FRONTEND_ARCHITECTURE.md  QUALITY_ASSURANCE_SOP.md  versioning.md
iswitch-tauri/: .folder.md  .prettierignore  .prettierrc  BENCHMARK.md  README.md  benchmark_payload.json  index.html  package-lock.json  package.json  vitest.config.ts
iswitch-tauri/.husky/: pre-commit
iswitch-tauri/src/: .folder.md  App.test.ts  App.vue  main.ts  style.css  vite-env.d.ts
iswitch-tauri/src-tauri/: .folder.md  Cargo.toml  audit.toml  build.rs  tauri.conf.json
iswitch-tauri/src-tauri/capabilities/: default.json
iswitch-tauri/src-tauri/icons/: .folder.md  icon.icns
iswitch-tauri/src-tauri/resources/: model-pricing.json
iswitch-tauri/src-tauri/src/: .folder.md  error.rs  lib.rs  main.rs
iswitch-tauri/src-tauri/src/commands/: .folder.md  claude.rs  codex.rs  hud.rs  log.rs  mcp.rs  mod.rs  provider.rs  settings.rs  skill.rs
iswitch-tauri/src-tauri/src/db/: .folder.md  mod.rs  request_log.rs
iswitch-tauri/src-tauri/src/models/: .folder.md  log.rs  mcp.rs  mod.rs  provider.rs  settings.rs  skill.rs
iswitch-tauri/src-tauri/src/proxy/: .folder.md  events.rs  handler.rs  health.rs  mod.rs  monitor.rs  router.rs  server.rs
iswitch-tauri/src-tauri/src/services/: .folder.md  app_settings.rs  claude_settings.rs  codex_settings.rs  hud_service.rs  import_service.rs  log_service.rs  mcp_service.rs  mod.rs  pricing_service.rs  provider_service.rs  skill_service.rs
iswitch-tauri/src-tauri/src/utils/: .folder.md  mod.rs  paths.rs  security.rs
iswitch-tauri/src-tauri/tests/: integration_test.rs
iswitch-tauri/src/components/: .folder.md
iswitch-tauri/src/composables/: .folder.md  useHUDState.test.ts  (+3 more)
openspec/: project.md
reports/: jony_ive_brainstorm.md  linus-torvalds-code-review-20260109.md  steve_jobs_brainstorm.md
scripts/: .folder.md  build-windows.bat  bump-version.ps1  bump-version.sh
skills/unit-test-generator/: SKILL.md
(+148 files in other folders)
