[package]
name = "iswitch"
version = "0.5.1"
description = "iSwitch - A Claude Code & Codex Provider Switcher"
authors = ["iSwitch Team"]
edition = "2021"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "iswitch_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# --- Tauri 核心 ---
tauri = { version = "2", features = ["tray-icon", "macos-private-api", "test"] }
tauri-plugin-opener = "2"
tauri-plugin-autostart = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
tauri-plugin-os = "2"

# --- 序列化 ---
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# --- 异步运行时 ---
tokio = { version = "1", features = ["full"] }

# --- HTTP 代理/服务 ---
axum = { version = "0.7", features = ["macros"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
hyper = "1"
http-body-util = "0.1"

# --- 数据库 ---
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "sqlite", "macros", "migrate"] }

# --- 错误处理与日志 ---
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# --- 工具库 ---
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
dirs = "5"
regex = "1"
once_cell = "1"
futures-util = "0.3"
zip = { version = "7.0.0", default-features = false, features = ["deflate"] }
serde_yaml = "0.9.34"
futures = "0.3.31"
tauri-plugin-dialog = "2.4.2"
window-vibrancy = "0.7.1"

[profile.release]
lto = true
opt-level = "s"
strip = true

[dev-dependencies]
tempfile = "3.24.0"
wiremock = "0.6"
